Enhance logging and error handling in CmdbCvsConversionApplication
- Added a Logger to log application events and errors to both console and file.
- Updated main method to log summaries of active and deactivated IPs.
- Improved error handling in makeApiCall and lookupQualysGroupId methods, logging detailed error messages.
- Refactored editQualysAssetGroup to log request and response details on errors.
- Updated sample CSV with new test data and boundary cases.
- Added unit tests for error handling and method functionality in CmdbCvsConversionApplicationTest.